<?xml version="1.0" encoding="utf-8"?>
<com.software.blurview.BlurView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/blurView" android:layout_width="match_parent" android:layout_height="match_parent" app:blurOverlayColor="@color/blurOverlayColor">
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_gravity="bottom" android:background="@drawable/bg_f6fbff_r12" android:paddingBottom="24dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="16dp" android:paddingStart="24dp">
        <ImageView android:id="@+id/iv_close" android:padding="4dp" android:layout_width="36dp" android:layout_height="36dp" android:src="@drawable/ic_action_clear" android:layout_marginEnd="4dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toTopOf="0"/>
        <ImageView android:id="@+id/iv_app_icon" android:layout_width="32dp" android:layout_height="32dp" android:layout_marginTop="24dp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
        <TextView android:textSize="18sp" android:textColor="@color/c_292929" android:ellipsize="end" android:gravity="center" android:id="@+id/tv_title" android:paddingLeft="36dp" android:paddingRight="36dp" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/action_uninstall" android:maxLines="1" android:layout_marginEnd="24dp" android:paddingHorizontal="36dp" app:layout_constraintBottom_toBottomOf="@+id/iv_app_icon" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="@+id/iv_app_icon"/>
        <TextView android:textSize="16sp" android:textColor="@color/c_D0292929" android:gravity="center" android:id="@+id/tv_content" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/delete_dialog_content" android:layout_marginEnd="24dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/iv_app_icon"/>
        <com.google.android.material.button.MaterialButton android:textSize="16sp" android:textColor="@color/white" android:id="@+id/btn_cancel" android:background="@drawable/bg_primary_r12" android:layout_width="match_parent" android:layout_height="40dp" android:layout_marginTop="12dp" android:text="@string/negative" android:layout_marginEnd="24dp" app:layout_constraintTop_toBottomOf="@+id/tv_content"/>
        <com.google.android.material.button.MaterialButton android:textSize="16sp" android:textColor="@color/colorPrimary" android:id="@+id/btn_confirm" android:background="@drawable/bg_white_r12" android:layout_width="match_parent" android:layout_height="40dp" android:layout_marginTop="4dp" android:text="@string/positive" android:layout_marginEnd="24dp" app:layout_constraintTop_toBottomOf="@+id/btn_cancel" style="?attr/materialButtonOutlinedStyle"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.software.blurview.BlurView>
